# Eshop_MAP

./: .env  .gitignore  Dockerfile  Dockerfile.frontend  config.py  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json  package.json  prometheus.yml  pyproject.toml  run.py
app/: __init__.py  models.py  views.py  views_admin.py
app/static/: css.css
app/templates/: admin.html  base.html  categories.html  index.html  login.html  register.html  users.html  view.html
app/templates/admin/: admin_dashboard.html  admin_products.html
frontend/: .env.local  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/public/files/: poznamky.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddToCart.tsx  Carousel.tsx  DarkModeToggle.tsx  Dropdown.tsx  InputField.tsx  OrderCard.tsx  ProductCard.tsx  ProductCardRaw.tsx  ProductList.tsx  SearchBar.tsx  TeamCard.tsx  footer.tsx  header-eshop.tsx  header.tsx  headerFirstNotWorkingVersion.tsx  heading.tsx  nav-items.tsx  sidebar-eshop.tsx
frontend/src/context/: AuthContext.tsx  ScrollContext.tsx
frontend/src/pages/: CancelPage.tsx  CartPage.tsx  CategoryPage.tsx  CheckoutPage.tsx  Login.tsx  OrdersPage.tsx  ProductDetail.tsx  Register.tsx  SuccessPage.tsx  cenik.tsx  eshop.tsx  home.tsx  iflash.tsx
migrations/versions/: 4eaf2ed9fcbb_initial_migration.py
tests/: gen_admin_user.py  gen_category.py  generate.py  load.js  load2.js  load3_lat.js  load4.js  startup_products.py
