[tool.poetry]
name = "eshop-map"
version = "0.1.0"
description = ""
authors = ["michalomegalul <dog560154@gmail.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
psycopg2-binary = "^2.9.9"
requests = "^2.32.2"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
importlib-metadata = "^8.5.0"
stripe = "^2.60.0"  # Ensure stripe is added

flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"
flask-cors = "^5.0.0"
[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
pytest-cov = "^4.0.0"
tox = "^4.6.0"

[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "^0.5.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "tox"]
